# moo_sick_py

./: .gitignore  README.md  audio.opus  bot.py  main.py  pyproject.toml
