[project]
name = "moosick"
version = "0.1.0"
description = "Music playing bot"
readme = "README.md"
requires-python = ">3.12, <3.13"
dependencies = [
    "isodate>=0.7.2",
    "py-cord[voice]==2.7.0rc2",
    "pynacl>=1.5.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "yt-dlp>=2025.11.12",
]
